[tool.poetry]
name = "tiebaMD"
version = "0.1.0"
description = "指定下载百度贴吧的某个帖子为 Markdown 文件"
authors = ["zombie110year <zombie110year@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
isort = "^5.7.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true