[project]
name = "tiebamd"
version = "0.1.1"
description = "指定下载百度贴吧的某个帖子为 Markdown 文件"
authors = [{ name = "zombie110year", email = "zombie110year@outlook.com" }]
dependencies = [
    "aiohttp==3.8.1",
    "requests>=2.27.1",
    "aiodns>=3.0.0",
    "colorama>=0.4.4",
    "tqdm>=4.64.0",
]
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
readme = "README.rst"

[project.urls]
Homepage = "https://github.com/zombie110year/tiebamd"

[project.scripts]

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.scripts]
tiebamd = { call = "tiebamd.cli:cli" }

[tool.pdm.dev-dependencies]
dev = ["yapf>=0.32.0", "isort>=5.10.1", "pytest>=7.1.1"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
